[Update]: Linked up the feature page

--- a/cmsapp/templates/cmsapp/landingpage.html
+++ b/cmsapp/templates/cmsapp/landingpage.html
@@ -1,70 +1,6 @@
+{% extends 'cmsapp/base.html' %}
 {% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/x-icon" href="{% static 'images/webBuildr.png' %}">
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
-    <title>WebBuildr</title>
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-</head>
-<body>
-    <main>
-        <!-- Header Section -->
-        <!-- <header class="landing-header"> -->
-        <!-- <nav class="landing-nav">
-          <div class="logo">
-            <img src="./images/nav/logo.svg" alt="" />
-          </div>
-          <ul class="landing-navList">
-            <li class="landing-nav-listItem">Product <span>
-                <div class="dropdown-arrow">
-                    <img src="./images/nav/downArrow.svg" alt="" />
-                </div>
-            </span> </li>
-            <li class="landing-nav-listItem">Resource <span>
-                <div class="dropdown-arrow">
-                    <img src="./images/nav/downArrow.svg" alt="" />
-                </div></li>
-            <li class="landing-nav-listItem">Template</li>
-            <li class="landing-nav-listItem">Hire an expert</li>
-          </ul>
-          <div class="landing-nav-action-btns">
-            <div class="landing-nav-login">
-              <a href="" class="landing-nav-login-link">LOG IN</a>
-            </div>
-            <button class="landing-nav-btn-primary-large">
-              <a class="getting-started-link" href="">GET STARTED</a>
-            </button>
-          </div>
-        </nav> -->
-    <!-- </header> -->
-    <header>
-        <nav class="navbar">
-            <div class="logo">
-                <img src="{% static 'images/nav/logo.svg' %}" alt="" />
-            </div>
-
-            <ul>
-                <li>Product</li>
-                <li>Resource</li>
-                <li onclick="getStarted()">Templates</li>
-                <li>Hire an expert</li>
-            </ul>
-
-            <div class="nav-btns">
-                {% if user.is_authenticated %}
-                <button> <a href="{% url 'accounts:logout' %}">LOG OUT</a></button>
-                {% else %}
-                <button> <a href="{% url 'accounts:login' %}">LOG IN</a></button>
-                {% endif %}
-                <button> <a href="{% url 'cmsapp:templates_page' %}">GET STARTED</a></button>
-            </div>
-        </nav>
-    </header>
+{% block content %}
 <!-- ---------------------------------------------------------------------------- -->
         <!-- hero section -->
         <section class="hero-section">
@@ -326,56 +262,4 @@
                 <hr>
             </div>
         </section>
-        <!-- Footer -->
-        <footer>
-            <div class="row">
-                <div class="col">
-                    <h3>Product</h3>
-                    <p><a href="#">Designer</a></p>
-                    <p><a href="#">Enterprise</a></p>
-                    <p><a href="#">CMS</a></p>
-                    <p><a href="#">Editor</a></p>
-                    <p><a href="#">SEO</a></p>
-                    <p><a href="#">Security</a></p>
-                </div>
-                <div class="col">
-                    <h3>Community</h3>
-                    <p><a href="#">Help Center</a></p>
-                    <p><a href="#">About</a></p>
-                    <p><a href="#">Terms of Service</a></p>
-                    <p><a href="#">Cookie Policy</a></p>
-                    <p><a href="#">Cookie Preference</a></p>
-                </div>
-                <div class="col">
-                    <h3>Features</h3>
-                    <p><a href="{% url 'cmsapp:templates_page' %}">Template</a></p>
-                    <p><a href="#">Hosting</a></p>
-                    <p><a href="#">Interaction</a></p>
-                    <p><a href="#">Logo Maker</a></p>
-                </div>
-                 <div class="col">
-                    <h3>Follow</h3>
-                    <p><a href="#">Twitter</a></p>
-                    <p><a href="#">Instagram</a></p>
-                    <p><a href="#">Linkedin</a></p>
-                    <p><a href="#">Facebook</a></p>
-                </div>
-                <div class="col">
-                    <h3>Resources</h3>
-                    <p><a href="#">Tutorial videos</a></p>
-                    <p><a href="#">Portfolio</a></p>
-                    <p><a href="#">Hire an expert</a></p>
-                    <p><a href="#">upcoming webinar</a></p>
-                </div>
-            </div>
-        </footer>
-    </main>
-</body>
-</html>
-
-<script>
-    AOS.init();
-    function getStarted() {
-        window.location.replace("{% url 'cmsapp:templates_page' %}")
-    }
-</script>
+{% endblock content %}
